--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0');
+
+@font-face {
+  font-family: 'Material Symbols Rounded';
+  src: url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0');
+}
+
+:root {
+  --bodyBg: #fff;
+  --mainColor: #282828;
+  --secondaryColor: #fff;
+  --backdrop: rgba(0,0,0, 0.3);
+  --shadow: 0 0 5px 2px rgba(0,0,0,0.2);
+}
+
 
 * {
   box-sizing: border-box;
@@ -9,16 +25,24 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: Onest, sans-serif;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--bodyBg);
+  color: var(--mainColor);
+  line-height: 1.2;
+}
+ul,
+ol {
+  list-style: none;
+}
+
+button {
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 a {
