--- a/client/src/app/layout.module.css
+++ b/client/src/app/layout.module.css
@@ -1,9 +1,21 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 20px 10px;
+  background: var(--bodyBg);
+  box-shadow: var(--shadow);
   h1 {
     font-size: 27px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 30px;
   }
 }
