--- a/client/src/components/healthNewsList.module.css
+++ b/client/src/components/healthNewsList.module.css
@@ -1,14 +1,13 @@
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
 }
 
 .article {
-  margin-bottom: 20px;
+  width: 100%;
   padding: 20px; /* Increased padding for better spacing */
   border: 1px solid #ccc;
-  width: calc(25% - 40px); /* 25% width for each box, considering margin and padding */
   box-sizing: border-box; /* Include padding and border in the element's total width */
   background-color: #fff; /* Set background color for the box */
 }
@@ -32,4 +31,20 @@
   color: #007bff;
   text-decoration: none;
   font-weight: bold; /* Make the link text bold */
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
