--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -12,6 +12,11 @@
   --secondaryColor: #fff;
   --backdrop: rgba(0,0,0, 0.3);
   --shadow: 0 0 5px 2px rgba(0,0,0,0.1);
+  --accentColor: #4bc8a1;
+  --border: rgba(0,0,0,0.1);
+  --placeholder: #a1a1a1;
+  --messageReceived: rgba(0,0,0,.05);
+  --messageSent: rgba(75, 200, 161, .2);
 }
 
 
@@ -26,6 +31,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: Onest, sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -40,9 +46,26 @@ ol {
 
 button {
   -webkit-appearance: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   background: none;
   cursor: pointer;
+}
+
+input {
+  -webkit-appearance: none;
+  outline: none;
+  border: 1px solid var(--border);
+  border-radius: 5px;
+  font-size: 17px;
+  padding: 5px 15px;
+  &::placeholder {
+    color: var(--placeholder);
+    font-size: 15px;
+    opacity: 1;
+  }
 }
 
 a {
