fix: structure of files, chartComponent

--- a/client/src/styles/chatbot.module.css
+++ b/client/src/styles/chatbot.module.css
@@ -115,6 +115,8 @@
 @media screen and (min-width: 1280px) {
   .chatbot {
     right: 30px;
+    max-width: 400px;
+    max-height: 60vh;
     &.open {
       transform: translateY(0) translateY(-30px);
     }
