--- a/client/src/app/layout.module.css
+++ b/client/src/app/layout.module.css
@@ -9,7 +9,8 @@
   padding: 20px 10px;
   background: var(--bodyBg);
   box-shadow: var(--shadow);
-  h1 {
+  z-index: 10;
+  .logo {
     font-size: 27px;
   }
 }
