--- a/client/src/styles/quotesComponent.module.css
+++ b/client/src/styles/quotesComponent.module.css
@@ -5,19 +5,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  margin:  20px 20px 0 ; /* Adjust left and right margins as needed */
+  height: 100%;
 }
 
 .blockquote {
   font-size: 24px;
   font-style: italic;
   margin-bottom: 20px;
-  text-align: center; /* Center the text */
+  text-align: center;
 }
 
 .author {
   font-size: 18px;
   font-weight: bold;
-  text-align: center; /* Center the text */
+  text-align: right;
 }
