--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -12,7 +12,7 @@
   --secondaryColor: #fff;
   --backdrop: rgba(0,0,0, 0.3);
   --shadow: 0 0 5px 2px rgba(0,0,0,0.1);
-  --accentColor: #4bc8a1;
+  --accentColor: #30c17c;
   --border: rgba(0,0,0,0.1);
   --placeholder: #a1a1a1;
   --messageReceived: rgba(0,0,0,.05);
