--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -44,6 +44,17 @@ ol {
   list-style: none;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6rem;
+  min-height: calc(100vh - 100px);
+  padding: 10px;
+  padding-top: 100px;
+}
+
 button {
   -webkit-appearance: none;
   display: flex;
@@ -73,3 +84,11 @@ a {
   text-decoration: none;
 }
 
+@media screen and (min-width: 1280px) {
+  main {
+    max-width: 1280px;
+    margin: auto;
+    padding: 30px;
+    padding-top: 130px;
+  }
+}
