feat: making the calories chart to be changable, made 2 components for bmi and whr cal and stack them in one component, did some css but just basic to see things clearer

--- a/client/src/app/page.module.css
+++ b/client/src/app/page.module.css
@@ -8,6 +8,16 @@
   padding: 10px;
   padding-top: 100px;
 }
+.motto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 200px;
+}
+.motto h3 {
+  font-size: 2rem;
+}
 
 @media screen and (min-width: 1280px) {
   .main {
