--- a/client/src/styles/personallog.module.css
+++ b/client/src/styles/personallog.module.css
@@ -19,11 +19,15 @@
   border: 1px solid black;
 }
 
-.logdate {
-  border: 1px solid black;
+.logdatecontainer {
   margin-right: 20px;
 }
 
+.logdate {
+  padding: 5px;
+  border: 1px solid black;
+}
+
 .food {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
