--- a/client/src/styles/caloriesChartComponent.module.css
+++ b/client/src/styles/caloriesChartComponent.module.css
@@ -1,15 +1,16 @@
 .chartContainer {
 
-  width: 300px; /* Set the desired width */
-  height: 300px; /* Set the desired height */
+  width: 500px; /* Set the desired width */
+  height: 500px; /* Set the desired height */
   margin: 0 auto; /* Center the container */
   margin-top: 300px; /* Add some top margin for spacing */
   margin-bottom: 100px;
+  padding-top: 50px;
 }
 
 .canvasContainer {
-  max-width: 300px; /* Set the desired maximum width */
-  max-height: 300px; /* Set the desired maximum height */
+  max-width: 400px; /* Set the desired maximum width */
+  max-height: 400px; /* Set the desired maximum height */
   margin: 0 auto; /* Center the container horizontally */
   margin-top: 20px; /* Add some top margin for spacing */
   margin-bottom: 100px;
