style: fix recipes page style, fix menu style

--- a/client/src/styles/recipes-page.module.css
+++ b/client/src/styles/recipes-page.module.css
@@ -14,3 +14,8 @@
     overflow-y: auto;
   }
 }
+@media screen and (min-width: 1024px){
+  .main {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
