--- a/client/src/styles/todaysExercisesMeals.module.css
+++ b/client/src/styles/todaysExercisesMeals.module.css
@@ -2,14 +2,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-
 }
 
 .boxExercisesMeals {
   width: 100%;
   display: flex;
   flex-direction: column;
-  min-width: 340px;
+  min-width: 380px;
   margin: 20px;
 }
 
@@ -33,10 +32,14 @@
   margin: 10px 0;
 }
 
-.exerciseItem .mealItem {
+.exerciseItem, .mealItem {
   padding: 5px 15px;
   border: 1px solid black;
   margin-right: 10px;
-  background-color: lightblue;
+  background-color: blue;
   width: 85%;
+}
+
+.checkBtn {
+  color: blue;
 }
