--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100;400;600;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0');
 
 @font-face {
@@ -14,9 +14,11 @@
   --shadow: 0 0 5px 2px rgba(0,0,0,0.1);
   --accentColor: #30c17c;
   --border: rgba(0,0,0,0.1);
+  --lightBorder: rgba(255,255,255,.2);
   --placeholder: #a1a1a1;
   --messageReceived: rgba(0,0,0,.05);
   --messageSent: rgba(75, 200, 161, .2);
+  --gradientText: linear-gradient(145deg, rgba(17,153,142,1) 0%, rgba(56,239,125,1) 100%);
 }
 
 
@@ -29,6 +31,7 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
   font-family: Onest, sans-serif;
   scroll-behavior: smooth;
@@ -47,14 +50,20 @@ ol {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 6rem;
-  min-height: calc(100vh - 100px);
+  min-height: 100vh;
   padding: 10px;
   padding-top: 100px;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
 button {
   -webkit-appearance: none;
   display: flex;
