--- a/client/src/styles/home.module.css
+++ b/client/src/styles/home.module.css
@@ -1,19 +1,20 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 6rem;
-  min-height: calc(100vh - 100px);
-  padding: 10px;
-  padding-top: 100px;
-}
-
-@media screen and (min-width: 1280px) {
-  .main {
-    max-width: 1280px;
-    margin: auto;
-    padding: 30px;
-    padding-top: 130px;
+.hero {
+  margin-bottom: 40px;
+  h1 {
+    font-size: 50px;
+    font-weight: 900;
+    background: var(--gradientText);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 30px;
+  }
+  p {
+    margin-bottom: 15px;
+    font-size: 19px;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
   }
 }
+
