--- a/client/src/styles/registrationComponent.module.css
+++ b/client/src/styles/registrationComponent.module.css
@@ -10,15 +10,21 @@
 
 .registerComponent label,
 .registerComponent input,
-.registerComponent button {
+.registerComponent button
+.registerComponent select {
   display: block;
   margin-bottom: 10px;
 }
 
-.registerComponent input {
+.registerComponent input,
+.registerComponent select {
   width: 100%;
   padding: 8px;
   font-size: 14px;
+}
+
+.registerComponent select {
+  margin-bottom: 18px;
 }
 
 .registerComponent button {
