--- a/client/src/styles/nutitionComponent.module.css
+++ b/client/src/styles/nutitionComponent.module.css
@@ -24,14 +24,18 @@
   h2 {
     font-size: 24px;
     font-weight: 100;
+    margin-bottom: 20px;
   }
-  input {
-    height: 45px;
+  form {
+    display: flex;
+    justify-content: space-between;
   }
+
   .nutrition-info {
     overflow-y: auto;
-    max-height: calc(100% - 170px);
+    max-height: calc(100% - 120px);
   }
+
 }
 
 .icon-nutritions {
@@ -49,16 +53,29 @@
     color: var(--secondaryColor);
   }
 }
+.icon-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+  background: var(--accentColor);
+  border-radius: 8px;
+  &::after {
+    content: '\e8b6';
+    font-family: 'Material Symbols Rounded';
+    font-size: 35px;
+    color: var(--secondaryColor);
+  }
+}
 
 .input-wrapper {
   margin-bottom: 20px;
-}
-
-.input-wrapper input {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  margin-top: 20px;
+  input {
+    height: 45px;
+    width: 100%;
+    max-width: calc(100% - 60px);
+  }
 }
 
 .button {
