--- a/client/src/styles/registrationComponent.module.css
+++ b/client/src/styles/registrationComponent.module.css
@@ -39,3 +39,12 @@
 .registerComponent button:hover {
   background-color: #45a049;
 }
+
+.goToLoginBox {
+  max-width: 300px;
+  margin: 10px auto 0;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
