--- a/client/src/styles/recipesComponent.module.css
+++ b/client/src/styles/recipesComponent.module.css
@@ -18,8 +18,7 @@
   flex-direction: column;
   padding: 20px;
   border-radius: 8px;
-  background: var(--bodyBg);
-  box-shadow: var(--shadow);
+  background: var(--secondaryColor);
   h2 {
     font-size: 25px;
     font-weight: 400;
