--- a/client/src/styles/exercisePage.module.css
+++ b/client/src/styles/exercisePage.module.css
@@ -12,6 +12,7 @@
     grid-auto-flow: dense;
     height: 100vh;
     overflow-y: auto;
+    gap: 50px;
   }
 }
 @media screen and (min-width: 1024px){
