--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,18 +7,20 @@
 }
 
 :root {
-  --bodyBg: #fff;
+  --bodyBg: #EBF1EC;
   --mainColor: #282828;
   --secondaryColor: #fff;
   --backdrop: rgba(0,0,0, 0.3);
   --shadow: 0 0 5px 2px rgba(0,0,0,0.1);
-  --accentColor: #30c17c;
+  --accentColor: #13542C;
   --border: rgba(0,0,0,0.1);
   --lightBorder: rgba(255,255,255,.2);
   --placeholder: #a1a1a1;
   --messageReceived: rgba(0,0,0,.05);
   --messageSent: rgba(75, 200, 161, .2);
   --gradientText: linear-gradient(145deg, rgba(17,153,142,1) 0%, rgba(56,239,125,1) 100%);
+  --secondaryBg: #01A21C;
+  --inputBg: #fff;
 }
 
 
@@ -74,6 +76,7 @@ button {
   cursor: pointer;
 }
 
+select,
 input {
   -webkit-appearance: none;
   outline: none;
@@ -81,6 +84,7 @@ input {
   border-radius: 5px;
   font-size: 17px;
   padding: 5px 15px;
+  background: var(--inputBg);
   &::placeholder {
     color: var(--placeholder);
     font-size: 15px;
