--- a/client/src/styles/layout.module.css
+++ b/client/src/styles/layout.module.css
@@ -7,11 +7,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 10px;
-  background: var(--bodyBg);
+  background: var(--accentColor);
   box-shadow: var(--shadow);
   z-index: 10;
   .logo {
     font-size: 27px;
+    color: var(--secondaryColor);
   }
 }
 
