--- a/client/src/styles/navbar.module.css
+++ b/client/src/styles/navbar.module.css
@@ -10,6 +10,7 @@
 .hamburger {
   &::after {
     content: '\e5d2';
+    color: var(--secondaryColor);
   }
 }
 
@@ -28,17 +29,16 @@
   width: calc(100% - 100px);
   max-width: 400px;
   height: 100%;
-  transition:  .25s ease-out;
+  transition: 0.25s ease-out;
   z-index: 10;
   transform: translateX(100%);
   &.open {
     transform: translateX(0);
   }
   ul {
-
     width: 100%;
     height: 100%;
-    background: var(--bodyBg);
+    background: var(--secondaryColor);
     padding: 30px;
     padding-top: 60px;
     box-shadow: var(--shadow);
@@ -54,6 +54,33 @@
     text-transform: uppercase;
     font-weight: 600;
     font-size: 24px;
+  }
+
+  a {
+    position: relative;
+    z-index: 1;
+    transition: color .3s ease-in-out;
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: var(--secondaryBg);
+      top: -5px;
+      left: -5px;
+      transform-origin: right;
+      transform: scaleX(0);
+      transition: transform 0.3s ease-in-out;
+      z-index: -1;
+      padding: 5px;
+    }
+    &:hover {
+      color: var(--secondaryColor);
+      &::before {
+        transform-origin: left;
+        transform: scaleX(1);
+      }
+    }
   }
 }
 
