--- a/client/src/styles/registrationComponent.module.css
+++ b/client/src/styles/registrationComponent.module.css
@@ -62,6 +62,8 @@
   a,
   a:link,
   a:visited {
+    display: inline-flex;
+    align-items: center;
     text-transform: uppercase;
     position: relative;
     z-index: 1;
@@ -79,6 +81,11 @@
       transition: transform 0.3s ease-in-out;
       z-index: -1;
       padding: 5px;
+    }
+    &::after {
+      content: '\e5c8';
+      font-family: 'Material Symbols Rounded';
+      margin-left: 5px;
     }
     &:hover {
       color: var(--secondaryColor);
