--- a/client/src/styles/registrationComponent.module.css
+++ b/client/src/styles/registrationComponent.module.css
@@ -2,11 +2,10 @@
 .goToLoginBox,
 .registerComponent {
   width: 100%;
-  max-width: 350px;
-  padding: 20px;
-  background: var(--secondaryBg);
+  max-width: 400px;
+  padding: 40px 30px;
+  background: var(--secondaryColor);
   border-radius: 8px;
-  color: var(--secondaryColor);
   label {
     display: inline-block;
     margin-bottom: 5px;
@@ -16,6 +15,7 @@
     width: 100%;
     margin-bottom: 20px;
     height: 45px;
+    border: 1px solid var(--border);
   }
   button {
     background: var(--accentColor);
@@ -33,7 +33,9 @@
     z-index: 2;
     border-radius: 5px;
     margin-bottom: 40px;
+    border: 1px solid var(--border);
     select {
+      width: 100%;
       height: 45px;
       background: transparent;
     }
@@ -47,6 +49,19 @@
       font-family: 'Material Symbols Rounded';
       font-size: 25px;
       z-index: -1;
+    }
+  }
+
+}
+
+.registerComponent {
+  p {
+    margin-top: 30px;
+    font-size: 18px;
+    a,
+    a:link {
+      font-weight: 600;
+      color: var(--accentColor);
     }
   }
 }
