style: fix menu style, add icons

--- a/client/src/styles/burnedCaloriesComponent.module.css
+++ b/client/src/styles/burnedCaloriesComponent.module.css
@@ -1,6 +1,6 @@
 .burnedCals {
   margin-bottom: 40px;
-  padding: 20px;
+  padding: 40px 30px;
   background: var(--secondaryBg);
   border-radius: 8px;
   h3 {
