--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -12,7 +12,7 @@
   --secondaryColor: #fff;
   --backdrop: rgba(0,0,0, 0.3);
   --shadow: 0 0 5px 2px rgba(0,0,0,0.1);
-  --accentColor: #13542C;
+  --accentColor: #02684a;
   --border: rgba(0,0,0,0.1);
   --lightBorder: rgba(255,255,255,.2);
   --placeholder: #a1a1a1;
