style: calculators style

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -21,6 +21,7 @@
   --gradientText: linear-gradient(145deg, rgba(17,153,142,1) 0%, rgba(56,239,125,1) 100%);
   --secondaryBg: #01A21C;
   --inputBg: #fff;
+  --errorColor: #c1121f;
 }
 
 
