--- a/client/src/styles/bmiCalComponent.module.css
+++ b/client/src/styles/bmiCalComponent.module.css
@@ -1,59 +1,47 @@
 
 
 .BMICalculator {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-}
-
-.BMICalculator h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.BMICalculator div {
-  margin-bottom: 15px;
-}
-
-.BMICalculator label {
-  font-weight: bold;
-}
-
-.BMICalculator input[type="text"] {
   width: 100%;
-  padding: 8px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 20px 15px;
+  border-radius: 5px;
+  background: var(--secondaryColor);
+  border-radius: 0 8px 8px 8px;
+  h2 {
+    font-size: 24px;
+    color: var(--accentColor);
+    margin-bottom: 20px;
+  }
+  label {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  input {
+    width: 100%;
+    height: 45px;
+    border: 1px solid var(--border);
+  }
+  .item-form {
+    margin-bottom: 20px;
+  }
+  button {
+    margin: 40px auto;
+    padding: 10px 20px;
+    background: var(--accentColor);
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--secondaryColor);
+    border-radius: 8px;
+  }
+  p {
+    font-size: 18px;
+    font-weight: 600;
+    span {
+      font-weight: 400;
+    }
+  }
 }
-
-.BMICalculator button {
-  background-color: #4fcd53;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.BMICalculator button:hover {
-  background-color: #38893e;
-}
-
-.BMICalculator p {
-  font-size: 18px;
-  margin-top: 20px;
-}
-
-.BMICalculator p span {
-  font-weight: bold;
-}
-
-.BMICalculator .errorMessage {
-  color: red;
-  margin-top: 10px;
+.errMessage {
+  color: var(--errorColor);
 }
