feat: ProfileInfosComponent.tsx was created and have a basic css, get all the infos and liked recipes & exercises and personal infos

--- a/client/src/styles/userProfile.module.css
+++ b/client/src/styles/userProfile.module.css
@@ -1,26 +1,39 @@
-/* ../styles/UserProfile.module.css */
+
 
 .userProfile {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.userInfo,
+.userInfo {
+  margin-top: 20px;
+}
+
 .favoriteExercises,
 .favoriteRecipes {
   margin-top: 20px;
-  padding: 10px;
-  background-color: #ffffff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
 }
 
+.favoriteExercises ul,
+.favoriteRecipes ul {
+  list-style: none;
+  padding: 0;
+}
 
-.loadingMessage {
-  font-weight: bold;
-  color: #333;
+.favoriteExercises li,
+.favoriteRecipes li {
+  margin-bottom: 10px;
+}
+
+.recipeImage {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 10px;
+  border-radius: 4px;
 }
