--- a/client/src/styles/home.module.css
+++ b/client/src/styles/home.module.css
@@ -17,4 +17,17 @@
     }
   }
 }
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
 
+@media screen and (min-width: 1024px) {
+  .content {
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
