--- a/client/src/styles/whrCalComponent.module.css
+++ b/client/src/styles/whrCalComponent.module.css
@@ -4,6 +4,7 @@
   border-radius: 5px;
   background: var(--secondaryColor);
   border-radius: 0 8px 8px 8px;
+  margin-bottom: 80px;
   h2 {
     font-size: 24px;
     color: var(--accentColor);
@@ -21,8 +22,27 @@
     border: 1px solid var(--border);
   }
   .item-select {
+    position: relative;
+    background: var(--secondaryColor);
+    z-index: 2;
+    border-radius: 5px;
+    margin-bottom: 40px;
+    border: 1px solid var(--border);
     select {
+      width: 100%;
       height: 45px;
+      background: transparent;
+    }
+    &::after {
+      content: '\e5cf';
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      color: var(--mainColor);
+      font-family: 'Material Symbols Rounded';
+      font-size: 25px;
+      z-index: -1;
     }
   }
   .item-form,
@@ -40,12 +60,15 @@
   }
   p {
     font-size: 18px;
-    font-weight: 600;
-    span {
-      font-weight: 400;
-    }
+    line-height: 1.5;
   }
 }
 .errMessage {
   color: var(--errorColor);
+}
+
+@media screen and (min-width: 1024px) {
+  .WHRCalculator {
+    padding: 30px 40px;
+  }
 }
