--- a/client/src/styles/exercisesComponent.module.css
+++ b/client/src/styles/exercisesComponent.module.css
@@ -1,4 +1,3 @@
-
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -32,16 +31,35 @@
   margin-bottom: 20px;
   background: var(--secondaryColor);
   font-size: 18px;
-  max-height: 320px;
+  max-height: 330px;
   &:has(.instructions) {
     max-height: 100%;
   }
   h3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 24px;
     color: var(--accentColor);
     border-bottom: 1px solid var(--border);
     padding-bottom: 15px;
     margin-bottom: 25px;
+    button {
+      margin: 0;
+      background: transparent;
+      padding: 0;
+      line-height: 1;
+      &::after {
+        content: '\e838';
+        font-family: 'Material Symbols Rounded';
+        color: var(--accentColor);
+        font-size: 40px;
+        transition: color .25s ease-out;
+      }
+      &.favorite {
+        color: var(--favorite);
+      }
+    }
   }
   p {
     margin-bottom: 10px;
