--- a/client/src/styles/userProfile.module.css
+++ b/client/src/styles/userProfile.module.css
@@ -1,39 +1,74 @@
-
-
 .userProfile {
-  max-width: 600px;
-  margin: 0 auto;
+  h1 {
+    font-size: 32px;
+    font-weight: 600;
+    color: var(--accentColor);
+  }
+}
+.userData {
+  background: var(--secondaryColor);
   padding: 20px;
-  border: 1px solid #ccc;
+  margin: 20px 0;
   border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  h2 {
+    color: var(--accentColor);
+    margin-bottom: 10px;
+  }
+  p {
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
 }
-
 .userInfo {
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
-
 .favoriteExercises,
 .favoriteRecipes {
-  margin-top: 20px;
-}
-
-.favoriteExercises ul,
-.favoriteRecipes ul {
-  list-style: none;
-  padding: 0;
-}
-
-.favoriteExercises li,
-.favoriteRecipes li {
-  margin-bottom: 10px;
-}
-
-.recipeImage {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  margin-right: 10px;
-  border-radius: 4px;
+  h3 {
+    font-size: 21px;
+    color: var(--accentColor);
+  }
+  p {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 16px;
+    margin: 10px 0;
+    a,
+    a:link {
+      display: inline-flex;
+      align-items: center;
+      position: relative;
+      z-index: 1;
+      transition: color 0.3s ease-in-out;
+      margin: 15px 0;
+      &::after {
+        content: '\e5c8';
+        font-family: 'Material Symbols Rounded';
+        font-size: 16px;
+        margin-left: 5px;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: var(--secondaryBg);
+        top: -5px;
+        left: -5px;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+        z-index: -1;
+        padding: 5px;
+      }
+      &:hover {
+        color: var(--secondaryColor);
+        &::before {
+          transform-origin: left;
+          transform: scaleX(1);
+        }
+      }
+    }
+  }
 }
