--- a/client/src/styles/userProfile.module.css
+++ b/client/src/styles/userProfile.module.css
@@ -3,12 +3,15 @@
     font-size: 32px;
     font-weight: 600;
     color: var(--accentColor);
+    margin-bottom: 30px;
   }
 }
 .userData {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
   background: var(--secondaryColor);
   padding: 20px;
-  margin: 20px 0;
   border-radius: 8px;
   h2 {
     color: var(--accentColor);
@@ -19,21 +22,19 @@
     font-size: 18px;
   }
 }
-.userInfo {
-  margin-bottom: 20px;
-}
 .favoriteExercises,
 .favoriteRecipes {
   h3 {
     font-size: 21px;
     color: var(--accentColor);
+    margin-bottom: 20px;
   }
   p {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     font-size: 16px;
-    margin: 10px 0;
+    margin-top: 10px;
     a,
     a:link {
       display: inline-flex;
@@ -41,7 +42,7 @@
       position: relative;
       z-index: 1;
       transition: color 0.3s ease-in-out;
-      margin: 15px 0;
+      margin-top: 15px;
       &::after {
         content: '\e5c8';
         font-family: 'Material Symbols Rounded';
@@ -71,4 +72,75 @@
       }
     }
   }
+
+  li {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+    strong {
+      font-size: 18px;
+      font-weight: 600;
+      display: block;
+      margin-bottom: 10px;
+    }
+  }
+}
+.favoriteRecipes {
+  margin-bottom: 0;
+  li {
+    img {
+      border-radius: 8px;
+    }
+    p {
+      &.title {
+        font-size: 18px;
+        font-weight: 600;
+      }
+    }
+  }
+}
+.recipeImg {
+  position: relative;
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
+  p {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5px 10px;
+    background: var(--accentColor);
+    margin: 0;
+    line-height: 1.5;
+    border-radius: 8px 0 8px 0;
+    color: var(--secondaryColor);
+    font-weight: 600;
+    &::after {
+      content: '\ef55';
+      font-family: 'Material Symbols Rounded';
+      font-size: 24px;
+      margin-left: 10px;
+      line-height: 1;
+      height: auto;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+   .userProfile {
+    grid-column: 1/3;
+    gap: 30px;
+   }
+   .userData {
+    grid-template-columns: repeat(2, 1fr);
+    grid-column: 1/-1;
+    gap: 30px;
+   }
+   .userInfo {
+    grid-column: 1/-1;
+   }
 }
