--- a/client/src/styles/userProfile.module.css
+++ b/client/src/styles/userProfile.module.css
@@ -130,6 +130,12 @@
   }
 }
 
+.userInfo {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
 @media screen and (min-width: 1024px) {
   .userProfile {
     grid-column: 1/3;
@@ -141,6 +147,15 @@
     gap: 30px;
   }
   .userInfo {
+    grid-template-columns: repeat(3, 1fr);
     grid-column: 1/-1;
+    background: var(--accentColor);
+    border-radius: 8px;
+    padding: 20px;
+    color: var(--secondaryColor);
+    h2 {
+      color: var(--secondaryColor);
+      margin-bottom: 20px;
+    }
   }
 }
