style: BMI and WHR calculators

--- a/client/src/styles/bmiCalComponent.module.css
+++ b/client/src/styles/bmiCalComponent.module.css
@@ -25,12 +25,15 @@
   }
   button {
     margin: 40px auto;
-    padding: 10px 20px;
+    padding: 15px 20px;
     background: var(--accentColor);
     font-size: 18px;
     font-weight: 600;
     color: var(--secondaryColor);
     border-radius: 8px;
+    width: 100%;
+    max-width: 200px;
+    text-transform: uppercase;
   }
   p {
     font-size: 18px;
@@ -38,6 +41,11 @@
     line-height: 1.5;
     span {
       font-weight: 400;
+    }
+  }
+  .result {
+    button {
+      margin-bottom: 0;
     }
   }
 }
