--- a/client/src/styles/bmiCalComponent.module.css
+++ b/client/src/styles/bmiCalComponent.module.css
@@ -55,6 +55,23 @@
 .errMessage {
   color: var(--errorColor);
 }
+.success {
+  position: fixed;
+  top: 100px;
+  right: 0;
+  max-width: 320px;
+  line-height: 1.5;
+  background: var(--accentColor);
+  padding: 20px;
+  border-radius: 12px;
+  color: var(--secondaryColor);
+  font-size: 18px;
+  transform: translateX(100%);
+  transition: transform 0.15s ease-out;
+  &.open {
+    transform: translateX(0) translateX(-30px);
+  }
+}
 
 .goToLogin {
   margin-top: 30px;
@@ -73,7 +90,7 @@
     text-transform: uppercase;
     position: relative;
     z-index: 1;
-    transition: color .3s ease-in-out;
+    transition: color 0.3s ease-in-out;
     &::before {
       content: '';
       position: absolute;
@@ -106,5 +123,8 @@
 @media screen and (min-width: 1024px) {
   .BMICalculator {
     padding: 30px 40px;
+  }
+  .success {
+    top: 150px;
   }
 }
