--- a/client/src/styles/whrCalComponent.module.css
+++ b/client/src/styles/whrCalComponent.module.css
@@ -77,7 +77,23 @@
 .errMessage {
   color: var(--errorColor);
 }
-
+.success {
+  position: fixed;
+  top: 100px;
+  right: 0;
+  max-width: 320px;
+  line-height: 1.5;
+  background: var(--accentColor);
+  padding: 20px;
+  border-radius: 12px;
+  color: var(--secondaryColor);
+  font-size: 18px;
+  transform: translateX(100%);
+  transition: transform 0.15s ease-out;
+  &.open {
+    transform: translateX(0) translateX(-30px);
+  }
+}
 .goToLogin {
   margin-top: 30px;
   border: 1px solid var(--border);
@@ -127,5 +143,8 @@
 @media screen and (min-width: 1024px) {
   .WHRCalculator {
     padding: 30px 40px;
+  }
+  .success {
+    top: 150px;
   }
 }
